k8s/sampledaytrader8/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampledaytrader8
  annotations:
    app.kubernetes.io/part-of: J2EE-DayTrader
    app.kubernetes.io/name: openliberty
spec:
  selector:
    matchLabels:
      app: sampledaytrader8
  template:
    metadata:
      labels:
        app: sampledaytrader8
    spec:
      containers:
      - name: sampledaytrader8
        image: quay.io/kameshsampath/openliberty.sampledaytrader8
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
