k8s/sampledaytrader8/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sampledaytrader8
spec:
  selector:
    app: sampledaytrader8
  ports:
  - port: 9080
    targetPort: 9080
