k8s/sampledaytrader8/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sampledaytrader8
spec:
  port:
    targetPort: 9080
  tls:
    termination: edge
  to:
    kind: Service
    name: sampledaytrader8
    weight: 100
  wildcardPolicy: None
